fix: margins and spacing

--- a/_includes/css/global.css
+++ b/_includes/css/global.css
@@ -70,11 +70,6 @@
   border: none !important;
 }
 
-time {
-  margin: 1rem;
-  display: block;
-}
-
 .page-title {
   margin: 1rem 0 0.5rem 0;
   font-weight: 100;
