--- a/_includes/css/post.css
+++ b/_includes/css/post.css
@@ -4,7 +4,7 @@
 }
 
 .post-header {
-  margin: 0 0 2rem 0;
+  margin: 0 0 1rem 0;
 }
 
 .post-title {
