--- a/_includes/css/reset.css
+++ b/_includes/css/reset.css
@@ -211,6 +211,11 @@ code {
   margin: 2rem 0;
 }
 
+time {
+  /* margin: 1rem; */
+  display: block;
+}
+
 h1,
 h2,
 h3,
@@ -344,7 +349,7 @@ picture::after {
 
 figure {
   width: fit-content;
-  margin: 2rem auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: baseline;
